--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "csv": "^5.3.2",
     "csv-parse": "^4.8.8",
     "csv-stringify": "^5.3.6",
+    "express": "^4.17.1",
     "node-fetch": "^2.6.0",
+    "serve-static": "^1.14.1",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {},
   "scripts": {
+    "build": "npm run download && npm run load && npm run generate",
     "load": "node src/loadDb.js",
     "download": "node src/download.js",
-    "generate": "node src/generateDataCsv.js > data.csv",
+    "generate": "node src/generateDataCsv.js > public/data.csv",
+    "serve": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
